# udp-data-pipeline

./: Cargo.toml  README.md
udp-data-pipeline-core/: Cargo.toml  README.md
udp-data-pipeline-core/src/: constants.rs  error.rs  lib.rs  logging.rs
udp-data-pipeline-core/src/messages/: error.rs  from_bytes.rs  message_producer.rs  mod.rs  published_message.rs  simple_message.rs  to_string.rs
udp-data-pipeline-core/src/socket/: mod.rs  multicast.rs
udp-multicast-publisher/: Cargo.toml  README.md
udp-multicast-publisher/src/: error.rs  lib.rs  publisher.rs
udp-multicast-publisher/src/publisher/: mod.rs  publisher.rs  publisher_config.rs
udp-multicast-publisher/src/publisher/tasks/: server.rs  socket.rs
udp-multicast-subscriber/: Cargo.toml  README.md
udp-multicast-subscriber/src/: error.rs  lib.rs
udp-multicast-subscriber/src/ab/: mod.rs  subscriber.rs
