[package]
name = "udp-data-pipeline-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]


[dev-dependencies]


[features]

# [[bench]]

# [[example]]
