[package]
name = "udp-multicast-subscriber"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
argh = { workspace = true }
udp-data-pipeline = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]


[features]

# [[bench]]

# [[example]]
